--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ h1{
 @media only screen and (max-width: 400px) {
     .container {
         width: 395px;
-        height: 500px;
+        height: 90%;
     }
     .img img {
         width: 9rem;
